--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,4 +19,7 @@ log4j.logger.org.apache.velocity.runtime.log.SimpleLog4JLogSystem=WARN
 log4j.logger.org.tuckey=WARN
 log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 
-log4j.logger.org.queryall=INFO
+log4j.logger.org.queryall=DEBUG
+log4j.logger.org.queryall.api.services=INFO
+log4j.logger.org.queryall.utils.RdfUtils=INFO
+log4j.logger.org.queryall.utils.StringUtils=INFO
