--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -21,5 +21,6 @@ log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 
 log4j.logger.org.queryall=DEBUG
 log4j.logger.org.queryall.api.services=INFO
+log4j.logger.org.queryall.query=TRACE
 log4j.logger.org.queryall.utils.RdfUtils=INFO
 log4j.logger.org.queryall.utils.StringUtils=INFO
