lower debugging level

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -23,4 +23,4 @@ log4j.logger.org.queryall=INFO
 log4j.logger.org.queryall.query=INFO
 log4j.logger.org.queryall.utils.QueryTypeUtils=INFO
 log4j.logger.org.queryall.api.utils.ProfileMatch=INFO
-log4j.logger.org.queryall.servlets.html=DEBUG
+log4j.logger.org.queryall.servlets.html=WARN
